--- a/DLLAsm/DLLAsm.vcxproj
+++ b/DLLAsm/DLLAsm.vcxproj
@@ -175,6 +175,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </MASM>
+    <None Include="..\..\..\Desktop\T (3)" />
     <None Include="LibAsm.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
