--- a/DLLAsm/DLLAsm.vcxproj.filters
+++ b/DLLAsm/DLLAsm.vcxproj.filters
@@ -34,6 +34,9 @@
     <None Include="LibAsm.def">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="..\..\..\Desktop\T (3)">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="LibAsm.asm">
