--- a/JA_ONP_PROJECT/JA_ONP_PROJECT.vcxproj.filters
+++ b/JA_ONP_PROJECT/JA_ONP_PROJECT.vcxproj.filters
@@ -32,4 +32,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
